IKASAN-2318 run the following on an individual module basis: mvn org.openrewrite.maven:rewrite-maven-plugin:run   -Drewrite.recipeArtifactCoordinates=org.openrewrite.recipe:rewrite-spring:RELEASE   -Drewrite.activeRecipes=org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_0 -Pall
wiretap, mapping and test modules failed to run due to an error

[ERROR] Failed to execute goal org.openrewrite.maven:rewrite-maven-plugin:5.10.0:run (default-cli) on project ikasan-parent: Execution default-cli of goal org.openrewrite.maven:rewrite-maven-plugin:5.10.0:run failed: Error while visiting ikasaneip/wiretap/src/test/java/org/ikasan/wiretap/dao/HibernateWiretapDaoTest.java: java.lang.ClassCastException: class org.openrewrite.java.tree.J$Identifier cannot be cast to class org.openrewrite.java.tree.Statement (org.openrewrite.java.tree.J$Identifier and org.openrewrite.java.tree.Statement are in unnamed module of loader org.codehaus.plexus.classworlds.realm.ClassRealm @332748b3)
[ERROR]   org.openrewrite.java.testing.cleanup.AssertEqualsBooleanToAssertBoolean$1.visitMethodInvocation(AssertEqualsBooleanToAssertBoolean.java:64)
[ERROR]   org.openrewrite.java.testing.cleanup.AssertEqualsBooleanToAssertBoolean$1.visitMethodInvocation(AssertEqualsBooleanToAssertBoolean.java:45)
[ERROR]   org.openrewrite.java.tree.J$MethodInvocation.acceptJava(J.java:3723)
[ERROR]   org.openrewrite.java.tree.J.accept(J.java:59)
[ERROR]   org.openrewrite.TreeVisitor.visit(TreeVisitor.java:278)
[ERROR]   org.openrewrite.TreeVisitor.visitAndCast(TreeVisitor.java:361)
[ERROR]   org.openrewrite.java.JavaVisitor.visitRightPadded(JavaVisitor.java:1306)
[ERROR]   org.openrewrite.java.JavaVisitor.lambda$visitBlock$4(JavaVisitor.java:385)
[ERROR]   ...
[ERROR] -> [Help 1]
[ERROR]
[ERROR] To see the full stack trace of the errors, re-run Maven with the -e switch.
[ERROR] Re-run Maven using the -X switch to enable full debug logging.
[ERROR]
[ERROR] For more information about the errors and possible solutions, plea